        PR tree-optimization/30784         * fold-const.c (fold_ternary): Handle CONSTRUCTOR in case         BIT_FIELD_REF.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123197 138bc75d-0d04-0410-961f-82ee72b054a4